updating earthquake project 3

--- a/eartquake_project.ipynb
+++ b/eartquake_project.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "ZRoK_4vEZt9B"
       },
@@ -73,7 +73,7 @@
         "id": "lkqU_U4faNYk",
         "outputId": "516daa1b-91bf-4d3d-af13-8d4d1529f057"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -519,7 +519,7 @@
         "id": "MVVyln29aoni",
         "outputId": "850aee4e-9f21-42a5-b4cf-694982fd2ee5"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -579,7 +579,7 @@
         "id": "3QKqczuHbdWc",
         "outputId": "c4ce01c0-1f2b-46eb-fa73-b1212fed5380"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -615,7 +615,7 @@
         "id": "rWqVkM9nbxtv",
         "outputId": "a20b769a-f16d-40f0-a2e6-29bdf7bfb8cb"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -800,7 +800,7 @@
       "metadata": {
         "id": "jDLLtjgPc0mO"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -811,7 +811,7 @@
       "metadata": {
         "id": "e3L4pVwcdDxU"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -827,7 +827,7 @@
         "id": "0x8An3i8dGo5",
         "outputId": "d9bf26b1-8e54-4268-bcf1-8167a64782d3"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -925,7 +925,7 @@
       "metadata": {
         "id": "R1DbLtVxd3wz"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -938,7 +938,7 @@
       "metadata": {
         "id": "wmF6YU6veHl2"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -983,7 +983,7 @@
       "metadata": {
         "id": "v2-YwIr8eCra"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1008,7 +1008,7 @@
         "id": "1N-_cMkYeccT",
         "outputId": "1c848638-77ef-4bc6-d1d7-6e40acba63a6"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1090,7 +1090,7 @@
       "metadata": {
         "id": "jGYXxndbfmma"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1107,7 +1107,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Shallow: 0–70 km, Intermediate: 70–300 km, Deep: 300+ km\n",
         "def categorize_depth(depth):\n",
         "    if depth <= 70:\n",
         "        return \"Shallow\"\n",
@@ -1121,7 +1120,7 @@
       "metadata": {
         "id": "jUags3_pj4tW"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1142,7 +1141,6 @@
       "source": [
         "plt.figure(figsize=(12,6))\n",
         "\n",
-        "# Scatter plot\n",
         "sns.scatterplot(\n",
         "    x='depth',\n",
         "    y='mag',\n",
@@ -1153,11 +1151,10 @@
         "    s=50\n",
         ")\n",
         "\n",
-        "# 2D KDE contour for density\n",
         "sns.kdeplot(\n",
         "    x=df_clean['depth'],\n",
         "    y=df_clean['mag'],\n",
-        "    levels=5,    # number of contour levels\n",
+        "    levels=5,\n",
         "    color='gray',\n",
         "    linewidths=1,\n",
         "    fill=False\n",
@@ -1178,7 +1175,7 @@
         "id": "xQytjvbzgSfb",
         "outputId": "74ad73dd-b6d6-40eb-dc25-5ce337bba402"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1231,7 +1228,7 @@
         "    hue='depth_category',\n",
         "    palette='coolwarm',\n",
         "    alpha=0.6,\n",
-        "    s=50  # constant size for all points\n",
+        "    s=50\n",
         ")\n",
         "\n",
         "plt.xlabel(\"Longitude\")\n",
@@ -1248,7 +1245,7 @@
         "id": "--QOn4R8hABO",
         "outputId": "7c76f890-e70d-4b6f-f578-9d5fce3eb1db"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1272,27 +1269,22 @@
         "import matplotlib.cm as cm\n",
         "import matplotlib.colors as colors\n",
         "\n",
-        "# Prepare data\n",
         "lon = df_clean['longitude'].values\n",
         "lat = df_clean['latitude'].values\n",
         "depth = df_clean['depth'].values\n",
         "mag = df_clean['mag'].values\n",
         "\n",
-        "# Create grid\n",
         "grid_lon, grid_lat = np.meshgrid(\n",
         "    np.linspace(lon.min(), lon.max(), 100),\n",
         "    np.linspace(lat.min(), lat.max(), 100)\n",
         ")\n",
         "\n",
-        "# Interpolate depth and magnitude onto the grid\n",
         "grid_depth = griddata((lon, lat), depth, (grid_lon, grid_lat), method='linear')\n",
         "grid_mag = griddata((lon, lat), mag, (grid_lon, grid_lat), method='linear')\n",
         "\n",
-        "# Normalize magnitude for color mapping\n",
         "norm = colors.Normalize(vmin=np.nanmin(grid_mag), vmax=np.nanmax(grid_mag))\n",
         "cmap = cm.viridis\n",
         "\n",
-        "# Create 3D plot\n",
         "fig = plt.figure(figsize=(14,10))\n",
         "ax = fig.add_subplot(111, projection='3d')\n",
         "\n",
@@ -1304,13 +1296,11 @@
         "    alpha=0.9\n",
         ")\n",
         "\n",
-        "# Create ScalarMappable for colorbar\n",
         "mappable = cm.ScalarMappable(norm=norm, cmap=cmap)\n",
         "mappable.set_array(grid_mag)\n",
         "cbar = fig.colorbar(mappable, ax=ax, shrink=0.5, aspect=10, pad=0.1)\n",
         "cbar.set_label('Magnitude')\n",
         "\n",
-        "# Labels and title\n",
         "ax.set_xlabel('Longitude')\n",
         "ax.set_ylabel('Latitude')\n",
         "ax.set_zlabel('Depth (km)')\n",
@@ -1326,7 +1316,7 @@
         "id": "ltz6WnHMqJnT",
         "outputId": "8ca023a2-1649-4f39-b902-f539397a43e3"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1358,9 +1348,9 @@
         "\n",
         "plt.figure(figsize=(10,10))\n",
         "plt.pie(\n",
-        "    state_counts.head(10),           # top 10 states\n",
+        "    state_counts.head(10),\n",
         "    labels=state_counts.head(10).index,\n",
-        "    autopct='%1.1f%%',               # show percentages\n",
+        "    autopct='%1.1f%%',\n",
         "    startangle=140,\n",
         "    shadow=True\n",
         ")\n",
@@ -1375,7 +1365,7 @@
         "id": "DuIiJHAkhIPM",
         "outputId": "0443b6d3-6b6b-4794-b381-263d4d1621e8"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1401,12 +1391,23 @@
     {
       "cell_type": "code",
       "source": [
+        "# Եզրակացություն\n",
+        "\n",
+        "Այս նախագծում վերլուծվել են վերջին 30 օրվա USGS-ի երկրաշարժերի տվյալները: Գլխավոր քայլերը ներառում էին տվյալների մաքրում, հետազոտական վերլուծություն (EDA) և հատկանիշների ինժեներություն: Հիմնական դիտարկումները և եզրակացությունները՝\n",
+        "\n",
+        "1. Ամենաշատ երկրաշարժերը տեղի են ունենում **մակերեսին մոտ (<70 կմ)** և կենտրոնացած են տեկտոնիկ ակտիվ շրջաններում՝ օրինակ Կալիֆորնիա և Ալյասկա:\n",
+        "2. **Մագնիտուդի բաշխումը** ցույց է տալիս, որ փոքր երկրաշարժերը շատ են, իսկ ուժեղ երկրաշարժերը հազվադեպ են:\n",
+        "3. `depth_category` և `state` սյունակների ստեղծումը հնարավորություն տվեց **կատեգորիական վերլուծության** և երկրաշարժերի օրինաչափությունների հեշտ ընկալման:\n",
+        "4. 3D և աշխարհագրական վերլուծությունները ցույց տվեցին **երկրաշարժերի կլաստերներ և հոտսփոթներ**, ինչպես մագնիտուդը, latitude-ը, longitude-ը և խորությունը փոխազդում են:\n",
+        "5. Տվյալների վստահելիությունը ներկայացնող սյունակները (`horizontalError` և `depthError`) վերլուծվեցին, բայց **չհամարվել մոդելավորման համար**, քանի որ նրանք բնութագրում են տվյալների ճշտությունը, ոչ թե երկրաշարժերի բնութագրերը:\n",
+        "\n",
+        "Ընդհանուր առմամբ, այս վերլուծությունը ցույց է տալիս, թե ինչպես տվյալների մաքրումը, հատկանիշների ինժեներությունը և վիզուալիզացիաները օգնում են հասկանալ երկրաշարժերի օրինաչափությունները և հայտնաբերել ռիսկային շրջանները: Նոթբուքը հեշտությամբ ընդլայնելի է՝ **նախատեսվող մոդելավորում կամ ինտերակտիվ վիզուալիզացիայի համար**:\n",
         "\n"
       ],
       "metadata": {
         "id": "jMrfv3tLoCUc"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
